fix contact alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -985,13 +985,12 @@
   display: flex;
   flex-direction: row;
   font-family: Arial, sans-serif;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   text-align: center;
   height: 100vh;
   margin: auto auto auto 5px;
-  width: 90%;
-  max-width: 1200px;
+  width: 96%;
 }
 
 .contact-title {
